feat: add login and dashboard pages + updates

--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -9,9 +9,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <!-- STYLES -->
-  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="../../assets/css/reset.css">
+  <link rel="stylesheet" href="../../assets/css/small-card.css">
+  <link rel="stylesheet" href="../../assets/css/card.css">
+  <link rel="stylesheet" href="../../assets/css/header.css">
+  <link rel="stylesheet" href="../../assets/css/navigation.css">
+  <link rel="stylesheet" href="../../assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="icon" href="./assets/img/dashstack.svg">
+  <link rel="icon" href="../../assets/img/dashstack.svg">
   <title>DashStack</title>
 </head>
 
@@ -19,7 +24,7 @@
   <main>
     <nav>
       <div class="logo">
-        <img src="./assets/img/logo.svg" alt="Logo DashStack">
+        <img src="../../assets/img/logo.svg" alt="Logo DashStack">
       </div>
       <ul class="nav-items" id="render"></ul>
       <div class="divider"></div>
@@ -32,29 +37,29 @@
     <section class="section">
       <header class="header">
         <div class="searchbar">
-          <img src="./assets/img/search-icon.svg" alt="Search Icon">
+          <img src="../../assets/img/search-icon.svg" alt="Search Icon">
           <input type="text" placeholder="Search...">
         </div>
         <div class="right">
           <div class="notification">
             <div class="count">6</div>
-            <img src="./assets/img/notification.svg" alt="Notification Icon">
+            <img src="../../assets/img/notification.svg" alt="Notification Icon">
           </div>
 
           <div class="language">
-            <img src="./assets/img/language.svg" alt="Language">
+            <img src="../../assets/img/language.svg" alt="Language">
             English
-            <img src="./assets/img/angle-down.svg" alt="Angle Down">
+            <img src="../../assets/img/angle-down.svg" alt="Angle Down">
           </div>
 
           <div class="user">
-            <img src="./assets/img/user.jpg" alt="User">
+            <img src="../../assets/img/user.jpg" alt="User">
             <div class="user-name">
               <p>Marcos L. Ferreira</p>
               <span>Admin</span>
             </div>
             <div class="angle-down">
-              <img src="./assets/img/angle-down.svg" alt="Angle Down">
+              <img src="../../assets/img/angle-down.svg" alt="Angle Down">
             </div>
           </div>
         </div>
@@ -68,7 +73,7 @@
           <div class="title">
             Sales Details
           </div>
-          <img class="graphic" src="./assets/img/graphic.png" alt="">
+          <img class="graphic" src="../../assets/img/graphic.png" alt="">
         </div>
 
         <div class="card">
@@ -81,8 +86,8 @@
     </section>
   </main>
 
-  <script src="./assets/js/nav.js"></script>
-  <script src="./assets/js/dashboard/small-cards.js"></script>
+  <script src="../../assets/js/nav.js"></script>
+  <script src="./assets/js/small-cards.js"></script>
 </body>
 
 </html>
