feat: add logo in container login and create account

--- a/pages/login/create-account/index.html
+++ b/pages/login/create-account/index.html
@@ -17,6 +17,10 @@
 </head>
 <body>
   <div class="container">
+    <div class="logo">
+      <img src="../../../assets/img/logo.svg" alt="Logo DashStack">
+    </div>
+
     <h1 class="title">Create an Account</h1>
     <p class="subtitle">Create a account to continue</p>
     
