--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -17,6 +17,10 @@
 </head>
 <body>
   <div class="container">
+    <div class="logo">
+      <img src="../../assets/img/logo.svg" alt="Logo DashStack">
+    </div>
+    
     <h1 class="title">Login to Account</h1>
     <p class="subtitle">Please enter your email and password to continue</p>
     
