feat: add route for all pages in nav menu + updates

--- a/pages/login/create-account/index.html
+++ b/pages/login/create-account/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <!-- STYLES -->
   <link rel="stylesheet" href="../../../assets/css/reset.css">
+  <link rel="stylesheet" href="../../../assets/css/input-text.css">
   <link rel="stylesheet" href="../../../assets/css/button.css">
   <link rel="stylesheet" href="../../../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/style.css">
