--- a/pages/settings/index.html
+++ b/pages/settings/index.html
@@ -56,28 +56,12 @@
       </header>
 
       <div class="container">
-        <h1 class="title">Dashboard</h1>
-        <div class="small-cards"></div>
-
-        <div class="card">
-          <div class="title">
-            Sales Details
-          </div>
-          <img class="graphic" src="../../assets/img/graphic.png" alt="">
-        </div>
-
-        <div class="card">
-          <div class="title">
-            Deals Details
-          </div>
-          
-        </div>
+        <h1 class="title">General Settings</h1>
       </div>
     </section>
   </main>
 
   <script src="../../assets/js/nav.js"></script>
-  <script src="./assets/js/small-cards.js"></script>
 </body>
 
 </html>
