--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -7,7 +7,9 @@
   <!-- FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <!-- STYLES -->
   <link rel="stylesheet" href="../../assets/css/reset.css">
   <link rel="stylesheet" href="../../assets/css/small-card.css">
@@ -56,27 +58,27 @@
       </header>
 
       <div class="container">
-        <h1 class="title">Dashboard</h1>
+        <h2 class="title">Dashboard</h2>
         <div class="small-cards"></div>
 
         <div class="card">
-          <div class="title">
-            Sales Details
+          <div class="flex-title">
+            <h3 class="title">Sales Details</h3>
           </div>
-          <img class="graphic" src="../../assets/img/graphic.png" alt="">
+          <img class="graphic" src="../../assets/img/graphic.png" alt="Graphic" draggable="false">
         </div>
 
         <div class="card">
-          <div class="title">
-            Deals Details
+          <div class="flex-title">
+            <h3 class="title">Deals Details</h3>
           </div>
-          
         </div>
       </div>
     </section>
   </main>
 
   <script src="../../assets/js/nav.js"></script>
+  <script src="./assets/js/months.js"></script>
   <script src="./assets/js/small-cards.js"></script>
 </body>
 
